extra information in AUTHORS.txt and update of setup.py

--- a/AUTHORS.txt
+++ b/AUTHORS.txt
@@ -4,3 +4,5 @@ Marek M. Rams
 Juraj Hasik
 Gabriela Wójtowicz
 Aritra Sinha
+
+For full list of contributors, see the revision history in source control.
